tests/baselines/reference/functionOverloads40.errors.txt
tests/cases/compiler/functionOverloads40.ts(4,9): error TS2755: No suitable overload for this call.


==== tests/cases/compiler/functionOverloads40.ts (1 errors) ====
    function foo(bar:{a:number;}[]):string;
    function foo(bar:{a:boolean;}[]):number;
    function foo(bar:{a:any;}[]):any{ return bar }
    var x = foo([{a:'bar'}]);
            ~~~~~~~~~~~~~~~~
!!! error TS2755: No suitable overload for this call.
!!! related TS2757 tests/cases/compiler/functionOverloads40.ts:4:15: Overload 1 of 2, '(bar: { a: number; }[]): string', gave the following error.
  Type 'string' is not assignable to type 'number'.
!!! related TS2757 tests/cases/compiler/functionOverloads40.ts:4:15: Overload 2 of 2, '(bar: { a: boolean; }[]): number', gave the following error.
  Type 'string' is not assignable to type 'boolean'.
    